--- a/index.html
+++ b/index.html
@@ -13,18 +13,21 @@
 <body>
 
     <nav id="navbar" class="nav">
-        <header id="nav-header"><h1>QIRoss Page</h1></header>
+        <header id="nav-header">
+          <img id="logo" src="qiross.png" alt="QIRoss">
+          <h1>Webpage</h1>
+        </header>
 
         <div id="div-list">
           <ul class="nav-list">
             <li>
-              <a href="#about">About</a>
+              <a href="#about"><h2>About</h2></a>
             </li>
             <li>
-              <a href="#projects">Projects</a>
+              <a href="#projects"><h2>Projects</h2></a>
             </li>
             <li>
-              <a href="#contact">Contact</a>
+              <a href="#contact"><h2>Contact</h2></a>
             </li>
           </ul>
         </div>
@@ -46,7 +49,7 @@
     </section>
 
     <footer>
-      
+
     </footer>
     
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
