more aesthetic stuff

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <nav id="navbar" class="nav">
+    <nav id="navbar">
         <header id="nav-header">
           <img id="logo" src="qiross.png" alt="QIRoss">
           <h1>Webpage</h1>
@@ -100,6 +100,31 @@
           <a href="" target="_blank">Link</a>
         </div>
       </div>
+
+      <div class="flexrow">
+        <div class="project-tile" id="Mobile">
+          <header>
+            <h2>Mobile</h2>
+          </header>
+          <a href="" target="_blank">Link</a>
+        </div>
+
+        <div class="project-tile" id="Embbeded_Systems">
+          <header>
+            <h2>Embbeded Systems</h2>
+          </header>
+          <a href="" target="_blank">Link</a>
+        </div>
+
+        <div class="project-tile" id="Design">
+          <header>
+            <h2>Design</h2>
+          </header>
+          <a href="" target="_blank">Link</a>
+        </div>
+
+      </div>
+
     </section>
 
     <section id="contact">
