--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <h1>Webpage</h1>
         </header>
 
-        <div id="div-list">
+        <!-- <div id="div-list"> -->
           <ul class="nav-list">
             <li>
               <a href="#about"><h2>About</h2></a>
@@ -30,7 +30,7 @@
               <a href="#contact"><h2>Contact</h2></a>
             </li>
           </ul>
-        </div>
+        <!-- </div> -->
       </nav>
 
     <section id="welcome-section">
