--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section id="about">
       <div id="text-div">
         <h1>About me</h1>
-        <p>Brazilian, 25 years old. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi illum ullam delectus vel debitis eius amet repellat asperiores quisquam. Neque, labore blanditiis voluptate aut ducimus corporis. Natus earum possimus itaque!</p>
+        <p>Brazilian, 25 years old. Electronic Technical Degree, Electronic Engineering (major) and computer science (minor) student. Powerlifting athlete, biophysics lover.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non itaque, totam repellat facere adipisci fugiat atque error at unde possimus reprehenderit natus a iure aliquid explicabo veritatis quis ipsa libero.</p>
       </div>
       <div id="photo-div">
